<resources>
    <string name="preference_file_key">com.comp30022.team_russia.assist.SimplePersistence</string>
    <string name="app_name">Assist</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="ongoing_nav">On Going Navigation Session</string>
    <string name="toolbar_title">Toolbar Title</string>

    <!--messaging strings-->
    <string name="message_detail">Detail</string>
    <string name="message_image_back">Back</string>
    <string name="message_image_description">Image</string>
    <string name="message_start_video_call">Start Video Call</string>
    <string name="message_start_navigation">Start Navigation</string>
    <string name="message_enter_message">Enter message</string>
    <string name="message_send">SEND</string>
    <string name="message_take_picture">Take Picture</string>
    <string name="message_select_picture">Select picture from album</string>
    <string name="message_unread_indicator">Unread Indicator</string>

    <string name="home_no_contacts">You have no contacts :(</string>

    <!-- Auth -->
    <string name="ap">Assisted Person</string>
    <string name="carer">Carer</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="assist">Assist</string>

    <string name="register_ap">Register as AP</string>
    <string name="register_carer">Register as Carer</string>

    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_mobile_number">Mobile Number</string>
    <string name="register_birth_date">Birth date</string>
    <string name="register_password">Password</string>
    <string name="register_emergency_contact_name">Emergency Contact Name</string>
    <string name="register_emergency_contact_number">Emergency Contact Number</string>
    <string name="register_confirm">Confirm</string>

    <!-- QR -->
    <string name="qr_code">QR Code</string>

    <!-- Details -->
    <string name="details_name">Name:</string>
    <string name="details_age">Age:</string>
    <string name="details_mobile_number">Mobile Number:</string>

    <!-- Profile -->
    <string name="profile_name">Name:</string>
    <string name="profile_click_to_edit_image">Click to edit image</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_profile">Profile</string>
    <string name="profile_d_o_b">D.O.B:</string>
    <string name="profile_mobile">Mobile:</string>
    <string name="profile_emergency_name">Emergency Name:</string>
    <string name="profile_emergency_number">Emergency Number:</string>
    <string name="profile_logout">Logout</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_mobile_number">Mobile Number</string>
    <string name="edit_profile_birth_date">Birth date</string>
    <string name="edit_profile_password">Password (Empty = no change)</string>
    <string name="edit_profile_emergency_contact_name">Emergency Contact Name</string>
    <string name="edit_profile_contact_number">Emergency Contact Number</string>

    <!-- Emergency -->
    <string name="emergency_call_prompt">AP is having an emergency, do you want to call?</string>
    <string name="emergency_start_call">START CALL</string>
    <string name="emergency_is_busy">I am Busy</string>

    <!-- Navigation -->
    <string name="navigation_enter_address">Enter Address, City or Zip Code</string>
    <string name="navigation_walk">Walk</string>
    <string name="navigation_public_transport">Public Transport</string>
    <string name="navigation_end_nav">END NAV</string>
    <string name="navigation_control">LET ME HAVE CONTROL</string>
    <string name="navigation_off_track">You are off track by more than 20m.</string>
    <string name="navigation_favourite">Favourite</string>
    <string name="navigation_accept">Accept</string>
    <string name="navigation_decline">Decline</string>
    <string name="navigation_transport_mode">Transport Mode</string>
    <string name="navigation_navigate">Navigation</string>
    <string name="message_chat_image">Chat Image</string>
    <string name="navigation_start_call">Start Call</string>
    <string name="navigation_show_camera">Show camera</string>
    <string name="navigation_gps">Current Location</string>
    <string name="navigation_zoom_in">Zoom in</string>
    <string name="navigation_zoom_out">Zoom out</string>
    <string name="navigation_search">Search</string>
</resources>
