<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/emergency_call_prompt"/>
    <Button
            android:text="@string/emergency_start_call"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:id="@+id/btnEmerCall"
            android:textColor="@color/colorRed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.075"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/emergency_is_busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEmerIgnore"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"/>

</android.support.constraint.ConstraintLayout>