<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeContactListActivity">

    <Button
        android:id="@+id/emergencyButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorRed"
        android:text="@string/emergency_button"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Emergency Button" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/customAppBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        style="@style/HeaderBar"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="?attr/actionBarPopupTheme"
        android:elevation="4dp"
        app:title="@string/toolbar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencyButton" />


    <Button
        android:id="@+id/ongoingNavButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorAccent"
        android:text="@string/ongoing_nav"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        tools:text="On going nav session"
        app:layout_constraintTop_toBottomOf="@id/customAppBar"/>

    <FrameLayout
        android:id="@+id/contentFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ongoingNavButton">

        <fragment
                android:id="@+id/default_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/navgraph_messaging"/>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/jisit_container"
            android:layout_width="278dp"
            android:layout_height="370dp"
            android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorBlue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.088"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.742"
    android:visibility="gone">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>

