<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".features.user_detail.ui.UserDetailFragment">
    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.comp30022.team_russia.assist.features.user_detail.vm.UserDetailViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:profile="@{viewModel.otherUserImageUri}"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:shrinkColumns="1">
            <TableRow
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text="@string/details_name"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="0dp" />

                <TextView
                        android:id="@+id/nameTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text='@{viewModel.otherUserName}'/>
            </TableRow>

            <TableRow
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text="@string/details_age"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="0dp" />
                <TextView
                        android:id="@+id/ageTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text='@{viewModel.otherUserAge}'/>
            </TableRow>

            <TableRow
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text="@string/details_mobile_number"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="0dp" />
                <TextView
                        android:id="@+id/mobileNumberTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_text_size"
                        android:text='@{viewModel.otherUserMobileNumber}'/>
            </TableRow>
        </TableLayout>

        <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
        />
    </LinearLayout>
</layout>